--- a/src/components/CardList/CardList.module.css
+++ b/src/components/CardList/CardList.module.css
@@ -1,7 +1,7 @@
-
 .cardList {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    max-width: 1180px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  max-width: 1180px;
 }
