--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -1,6 +1,6 @@
 .container {
   display: flex;
-  background-image: url(../../assets/images/bgHome6.png);
+  background-image: url(../../assets/images/bgHome.png);
   background-size: cover;
   justify-content: center;
   align-items: center;
