--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,6 +1,4 @@
-
-$mainDarkColor: #5736A3;
-$mainLightColor: #EBD8FF;
+$mainDarkColor: #5736a3;
+$mainLightColor: #ebd8ff;
 $darkTextColor: #373737;
-$accentBtnColor: #5CD3A8;
-
+$accentBtnColor: #5cd3a8;
