--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -69,6 +69,7 @@
   font-weight: 600;
   line-height: normal;
   text-transform: uppercase;
+  border: none;
   border-radius: 10px;
   color: $darkTextColor;
 }
